# -*- python -*-

load("//tools:drake.bzl", "drake_cc_googletest", "drake_cc_library")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])
#package(default_visibility = [":__subpackages__"])

drake_cc_library(
    name = "kuka_iiwa_robot_library",
    testonly = 1,
    srcs = [
        "drake_kuka_iiwa_robot.cc",
    ],
    hdrs = [
        "drake_kuka_iiwa_robot.h",
    ],
    deps = [
        ":make_kuka_iiwa_model",
        "//math:geometric_transform",
        "//multibody/multibody_tree",
        "//multibody/multibody_tree/test_utilities:spatial_kinematics",
    ],
)

drake_cc_library(
    name = "make_kuka_iiwa_model",
    srcs = [
        "make_kuka_iiwa_model.cc",
    ],
    hdrs = [
        "make_kuka_iiwa_model.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:default_scalars",
        "//math:geometric_transform",
        "//multibody/multibody_tree",
    ],
)

drake_cc_library(
    name = "make_kuka_iiwa_plant",
    srcs = [
        "make_kuka_iiwa_plant.cc",
    ],
    hdrs = [
        "make_kuka_iiwa_plant.h",
    ],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":make_kuka_iiwa_model",
        "//common:find_resource",
        "//geometry:geometry_system",
        "//multibody/multibody_tree/multibody_plant",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "kuka_iiwa_robot_kinematics_test",
    size = "small",
    deps = [
        ":kuka_iiwa_robot_library",
        "//multibody/benchmarks/kuka_iiwa_robot/MG:MG_kuka_robot_lib",
    ],
)

drake_cc_googletest(
    name = "kuka_iiwa_robot_inverse_dynamics_test",
    size = "small",
    deps = [
        ":kuka_iiwa_robot_library",
        "//multibody/benchmarks/kuka_iiwa_robot/MG:MG_kuka_robot_lib",
    ],
)

add_lint_tests()
