# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "volumetric_contact_model",
    srcs = [
        "volumetric_contact_model.cc",
    ],
    hdrs = [
        "volumetric_contact_model.h",
    ],
    copts = [
        "-Wno-old-style-cast",
        "-Wno-error",
        "-Wno-deprecated",
        "-Wno-maybe-uninitialized",
        "-Wno-overloaded-virtual",
        "-Wno-extra",
    ],
    deps = [
        "//common:default_scalars",
        "//multibody/plant/volumetric_contact/wildmagic:convex_polyhedra",
        "//geometry:geometry",
        "@tinyobjloader",
    ],
)

add_lint_tests()
