# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "wildmagic_tools",
    srcs = [
        "wildmagic_tools.cc",
    ],
    hdrs = [
        "wildmagic_tools.h",
    ],
    # All the inlined code from Wm5 needs this or we get a build error.
    copts = [
        "-g -O0",
        "-Wno-old-style-cast",
        "-Wno-error",
        "-Wno-deprecated",
        "-Wno-maybe-uninitialized",
        "-Wno-overloaded-virtual",
        "-Wno-extra",
    ],
    deps = [
        "//common:default_scalars",
        "//multibody/plant/volumetric_contact/wildmagic:convex_polyhedra",
        "@wildmagic",
    ],
)

add_lint_tests()
